--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -128,14 +128,14 @@ form {
 }
 
 .left_section {
-  background-color: rgba(0, 139, 139, 0.8);
+  background-color: #DF3B57(0, 139, 139, 0.8);
   flex: 0 1 auto;
   margin: 1rem;
   padding: 1.5rem;
 }
 
 .right_section {
-  background-color: rgba(255, 224, 138, 0.7);
+  background-color: #DF3B57(255, 224, 138, 0.7);
   flex: 1 2 auto;
   margin: 1rem;
   align-items: center;
